--- a/source/_posts/2019-09-07-Linux.md
+++ b/source/_posts/2019-09-07-Linux.md
@@ -233,7 +233,7 @@ int execvp(const char *file, char *const argv[]);
 
 这些函数内部都会调用库函数 `int execve(const char *filename, char *const argv[],char *const envp[]);`，该函数会将当前进程空间清空，而后根据传入的参数装载指定的可执行文件（二进制或者脚本）来执行。
 
-```
+```c
 say_yes.sh
 #!/usr/bin/env bash
 
@@ -313,3 +313,9 @@ Yes, /home/liam/test/say_yes.sh is running!
 <img src="https://i.loli.net/2019/09/10/jlnP3kGIQwpg6dm.png" style="zoom:150%;" />
 
 形象比喻：软件总是喜欢加一个中间层来解决问题，硬件喜欢直来直去
+
+# linux下用inode删除文件
+
+ls -i
+
+find ./ -inum 401785 -exec rm -i {} \;
