--- a/source/_posts/2019-12-02-C++STL.md
+++ b/source/_posts/2019-12-02-C++STL.md
@@ -409,32 +409,93 @@ class complex{};
   
   
   
-## traits
+## traits 萃取
 
-  萃取，特征，一种人为制造的萃取机器：我丢给它一些东西，它可以萃取出我想要的特征
+萃取，特征，一种人为制造的萃取机器：我丢给它一些东西，它可以萃取出我想要的特征
 
-  iterator_category：描述了迭代器的性质：有的迭代器可以一往无前的向前冲++，有的还可以后退--，有的可以跳着走......
+STL 中，容器和算法是分开的，两者之间靠的是迭代器进行连接。算法是如何从迭代器中知道元素的类型的呢？靠的就是萃取。。。
 
-  diffrence_type：两个迭代器之间的距离用啥来表示？比如int表示你的容器的两个迭代器的距离范围最大是2^32。一般设为ptrdiff_t，是一个Unsigned long类型的
+简单来说，如果我们封装了一个算法，这个算法可能会由于输入数据类型的不同导致算法内部处理逻辑的不同（比如说传入的是int类型我们做一种操作，而传入的是double类型我们将进行另外一种操作），而我们并不想由于这种原因修改算法的封装时，Traits就派上用场了，它可以帮我们很方便的实现功能，而又不破坏函数的封装。
+迭代器所指对象的类型，称为该迭代器的 value_type。我们来简单模拟一个迭代器 traits classes 的实现。
 
-  value_type：迭代器所指的容器里面的元素的类型
+ ```c
+// 主模板 不使用模板参数列表--》 my_iterator_traits<Iter T>
+template<class IterT>
+struct my_iterator_traits {
+    typedef typename IterT::value_type value_type;
+};
+//简单的偏特化版本
+template<class IterT>
+struct my_iterator_traits<IterT*> {
+    typedef IterT value_type;
+};
 
-```c
-template<typename _Tp> inline
-Mat_<_Tp>::Mat_(int _rows, int _cols)
-    : Mat(_rows, _cols, traits::Type<_Tp>::value)
-{
+void fun(int a) {
+    cout << "fun(int) is called" << endl;
 }
-```
 
-   traits::Type<_Tp>::value
+void fun(double a) {
+    cout << "fun(double) is called" << endl;
+}
 
-我对这段话的理解是，cv::DataType<>是一个模板类，当OpenCV中库函数需要传递特定数据类型的某些概念信息时，那么就可以通过创建cv::DataType<> 类型的对象来实现。我们使用的不是它本身，而是它特定的实例化对象。C++中这种用法叫做Traits。
+void fun(char a) {
+    cout << "fun(char) is called" << endl;
+}
+my_iterator_traits<vector<int>::iterator>::value_type a;
+fun(a);  // 输出 fun(int) is called
+my_iterator_traits<vector<double>::iterator>::value_type b;
+fun(b);  // 输出 fun(double) is called
+my_iterator_traits<char*>::value_type c;
+fun(c);  // 输出 fun(char) is called
 
-  说实话，第一次看这一篇章，我也没有看懂cv::DataType<>到底是做什么用的，不过下面讲解一下Traits后，就能明白上面说意思了。
 
-  简单来说，如果我们封装了一个算法，这个算法可能会由于输入数据类型的不同导致算法内部处理逻辑的不同（比如说传入的是int类型我们做一种操作，而传入的是double类型我们将进行另外一种操作），而我们并不想由于这种原因修改算法的封装时，Traits就派上用场了，它可以帮我们很方便的实现功能，而又不破坏函数的封装。
-  Traits在开发者中运用特别多，主要也就是为了解决用户的负担，让一些复杂逻辑处理留给开发者来做，用户只需要根据要求调用API函数即可。
+// 为了便于理解，我们这里贴出 vector 迭代器声明代码的简化版本：
+template <class T, ...>
+class vector {
+public:
+    class iterator {
+    public:
+        typedef T value_type;
+        ...
+    };
+...
+};
+ ```
+
+my_iterator_traits 其实就是个类模板，其中包含一个类型的声明。有上面 typename 的基础，相信大家不难理解 typedef typename IterT::value_type value_type; 的含义：将迭代器的value_type 通过 typedef 为 value_type。
+
+>为什么要在typedef后面加上typename关键字？
+>
+>之所以使用 typename 是由于C++默认使用 ：： 访问的名字不是类型
+>
+>原因：
+>
+>实际上，模板类型在实例化之前，编译器并不知道`vector<T>::size_type`是什么东西，事实上一共有三种可能：
+>
+>> 静态数据成员
+>> 静态成员函数
+>> 嵌套类型
+>
+>那么此时`typename`的作用就在此时体现出来了——定义就不再模棱两可。
+>
+>`typedef`创建了存在类型的别名，而`typename`告诉编译器`std::vector<T>::size_type`是一个类型而不是一个成员。
+>
+>默认情况下，C++ 语言假定通过作用域运算符访问的名字不是类型。因此，如果我们希望使用一个模板类型参数的类型成员，就必须显式告诉编译器该名字是一个类型。我们通过使用关键字 typename 来实现这一点：
+
+ 我们来解释 my_iterator_traits<vector<int>::iterator>::value_type a; 语句的含义。
+vector<int>::iterator 为vector<int> 的迭代器，该迭代器包含了 value_type 的声明，由 vector 的代码可以知道该迭代器的value_type 即为 int 类型。
+接着，my_iterator_traits<vector<int>::iterator> 会采用 my_iterator_traits 的通用版本，即 my_iterator_traits<vector<int>::iterator>::value_type 使用 typename IterT::value_type 这一类型声明，这里 IterT 为 vector<int>::iterator，故整个语句萃取出来的类型为 int 类型。
+
+对 double 类型的 vector 迭代器的萃取也是类似的过程。
+
+而 my_iterator_traits<char*>::value_type 则使用 my_iterator_traits 的偏特化版本，直接返回 char 类型。
+
+由此看来，通过 my_iterator_traits ，我们正确萃取出了迭代器所指元素的类型。
+
+总结一下我们设计并实现一个 traits class 的过程：
+1）确认若干我们希望将来可取得的类型相关信息，例如，对于上面的迭代器，我们希望取得迭代器所指元素的类型；
+2）为该信息选择一个名称，例如，上面我们起名为 value_type；
+3）提供一个 template 和一组特化版本（例如，我们上面的 my_iterator_traits），内容包含我们希望支持的类型相关信息。
 
   https://blog.csdn.net/XiangJiaoJun_/article/details/84843194![](https://i.loli.net/2019/12/06/5FO9TWbmznukGlx.png)
 
@@ -466,36 +527,6 @@ Mat_<_Tp>::Mat_(int _rows, int _cols)
   而typedef有自己的作用域。
   
   
-  
-- c++的一个语法：
-  
-  
-  
-  将typedef和typename关键字联用。
-  
-  ```
-  template <class T,class Alloc=alloc>class vector{public://...typedef size_t size_type;//...};
-  ```
-  
-  从vector的类定义可以看出，`vector::size_type`是`vector`嵌套类型定义，其实际等价于 `size_t`类型。
-  
-  ```
-  vector<int>::size_type ssize;//就等价于size_t ssize;
-  ```
-  
-  为什么要在typedef后面加上typename关键字？
-  
-  原因：
-  
-  实际上，模板类型在实例化之前，编译器并不知道`vector<T>::size_type`是什么东西，事实上一共有三种可能：
-  
-  > 静态数据成员
-  > 静态成员函数
-  > 嵌套类型
-  
-  那么此时`typename`的作用就在此时体现出来了——定义就不再模棱两可。
-  
-  `typedef`创建了存在类型的别名，而`typename`告诉编译器`std::vector<T>::size_type`是一个类型而不是一个成员。
   
   
   
@@ -656,6 +687,7 @@ using namespace cv;
 		void stable_sort(RandomAccessIterator first, RandomAccessIterator last, StrictWeakOrdering cmp);
 		完成区间[first,last)的稳定排序。（后一个版本使排序后的区间内相邻元素满足cmp(*(i+1),*i)==false（i为迭代器）。）
 	
+
 ----------------------------------------------------------------------------------------------------
 2010.04.05
 
