--- a/source/_posts/2020-04-26-虚函数-纯虚函数-运行多态.md
+++ b/source/_posts/2020-04-26-虚函数-纯虚函数-运行多态.md
@@ -17,6 +17,11 @@ date: 2020-04-26 18:47:27
 
 # C++类对象内存分布
 
+http://nightn.com/2018/08/05/cpp-object-memory-1/
+
+- **虚表的 -1 位置**。细心的读者可能会发现，虚表第一个虚函数的上面还有一个地址，它其实指向的是这个类的 `type_info` 对象，`type_info` 对象描述了类的简要信息（如 name, hash_code 等），用以支持 `RTTI(runtime type identification)` 。我们使用的 `typeid` 运算符，应该就是通过访问 `type_info` 对象实现的。
+- **虚表是类层面上的，而不是对象层面上的**。即同一个类的不同对象，共享同一个虚表。
+
 先选择左侧的C/C++->命令行，然后在其他选项这里写上/d1 reportAllClassLayout，它可以看到所有相关类的内存布局，如果写上/d1 reportSingleClassLayoutXXX（XXX为类名），则只会打出指定类XXX的内存布局。
 
 ![image-20200408220704507](https://i.loli.net/2020/04/08/EUFLn3IeTGxRVC1.png)
@@ -155,6 +160,12 @@ public:
 还是只有一个虚表指针，但是下方虚表的内容变化了，虚表的0号是父类的VirtualFunction，而1号放的是子类的VirtualFunction2。也就是说，如果定义了DerivedClass的对象，那么在构造时，虚表指针就会指向这个虚表，以后如果调用的是VirtualFunction，那么会从父类中寻找对应的虚函数，如果调用的是VirtualFunction2，那么会从子类中寻找对应的虚函数。
 
 更多关于虚继承、多重继承请参阅https://blog.csdn.net/songshiMVP1/article/details/51253387
+
+
+
+## 一般把析构函数写成虚函数是为什么
+
+答：动态绑定时如果基类指针如果指向派生类对象，不是虚函数的话只会调用基类析构，而是虚函数的话就能正确调用派生类的析构
 
 # 虚函数与纯虚函数
 
