--- a/source/_posts/2020-03-17-Schedule.md
+++ b/source/_posts/2020-03-17-Schedule.md
@@ -453,3 +453,277 @@ https://github.com/linyacool/WebServer
 
 ![image-20200328232437290.png](https://i.loli.net/2020/03/29/MrXK23Qbg8wuyem.png)
 
+![image-20200519165622062](https://i.loli.net/2020/05/19/d8CQmalZx9ELeUq.png)
+
+![image-20200519165630798](https://i.loli.net/2020/05/19/MxoOuVLtbZGlYfP.png)
+
+-    说下TCP断开连接（TCP四次挥手，从客户端开始断开连接说的。）close wait 和time wait分别在哪边？啥作用？假如是服务器先断开连接那time wait状态是在服务器那边吗？（我也不清楚，吞吞吐吐说是）
+-    java 多线程写过没有？线程怎么保证安全？（好像是这么问的，说上锁？？ 然后举了个i++自增的例子）
+-    红黑树和二分查找复杂度，hash表复杂度，为什么？（O（1）,然后说了如果冲突了一般会用拉链法，一个拉链若有N个结点的话，在这个拉链上查找就变成了o(n)，然后又问如果是用拉链法的话总体时间复杂度是多少（我开始说O(1)，说理由感觉有点懵了，后面说这不是跟拉链长度有关嘛）然后问，拉链要是太长了怎么办（转成树结构），hash表要是太满了如果每一个拉链都特别长呢？（扩容，重新放置元素）还有其他解决冲突的方法没有？（冲突了直接找下一个空闲位置，这个好像叫线性探测法？）
+-    进程和线程的区别；同一个进程中的线程共享哪些资源，哪些是独占的。线程是怎么进行切换的。
+-    2G内存是怎么运行4g的程序？回答的时候说到，需要用到的页要调入内存，遂问，你怎么知道需要用到哪一页？（我说程序都是顺序存放的，巴拉巴拉，也不知道对不对😂）
+-    （数据库熟不熟？我说只会一些基本操作）索引是什么（我好像只会说索引的作用是啥，是什么就。。。）
+-    有哪些索引？什么是聚簇索引？他的叶子节点和非叶子节点都放了什么？B+树索引有什么特点，好处？为什么不用二叉树？
+-    你算法怎么样？（我说我也不知道😂）遂出了这题：加入迈台阶一次可以迈1或2或3步，100阶的台阶有多少种走法？
+
+## 5亿个数中找中位数
+
+## TRIE字典树
+
+## 红黑树
+
+## [5211. 概率最大的路径](https://leetcode-cn.com/problems/path-with-maximum-probability/)
+
+
+
+## [仅含 1 的子串数](https://leetcode-cn.com/problems/number-of-substrings-with-only-1s/)
+
+这道题是字节跳动的周赛题，我原先是使用统计出现连续字符的数量，放进一个容器里，然后用等差数列求和的方式来统计的；但是感觉过于复杂，代码如下：
+
+```c
+class Solution {
+public:
+    int numSub(string s) {
+        int n = s.size();
+        int count = 1;
+        vector<int> num;
+        int res
+        for(int i = 0; i < n; ++i){
+            if(s[i] == s[i+1]){
+                count++;
+            }
+            else{
+                num.push_back(count);
+                count = 1;
+            }
+        }
+        num.push_back(count);
+        for(auto it : num){
+            res = res + it*(it+1)/2;
+        }
+        return res;
+    }
+    ------这个是统计0和1所有字符出现的次数的与题目不是很符合，所以我就改了半天
+class Solution {
+public:
+    int numSub(string s) {
+        int n = s.size();
+        int count = 1;
+        vector<int> num;
+        long long  res=0;
+        for(int i = 1; i < n; ++i){
+            if(s[i] == s[i-1] && s[i] == '1' && s[i-1] == '1'){
+                count++;
+            }
+            else if(s[i] == '0' && s[i-1] == '1')
+            //else
+            {
+                num.push_back(count);
+                count = 1;
+            }
+        }
+        if(s[n-1] == '1')
+        num.push_back(count);
+        for(auto it : num){
+            
+            long long tmp = it;
+            
+            //(it*(it+1) / 2) % (1000000007);
+            cout << it << " ";
+            res = (res + tmp*(tmp+1) / 2) % (1000000007);
+        }
+        return res;
+    }  
+}  ; 
+```
+
+这个才是比较轻便的做法：
+
+```c
+class Solution {
+public:
+    int numSub(string s) {
+        int n = s.size();
+        int mod = 1e9 + 7;
+        long long res = 0;
+        for(int i = 0; i < n; ++i){
+            if(s[i] == '1'){
+                int j = i;
+                long long  len = 0;
+                while(j < n && s[j] == '1'){
+                    len++;
+                    j++;
+                }                
+                long long tmp = (len * (len + 1) / 2) % mod;
+                res = (res + tmp) % mod; 
+                cout << len << ' ';               
+                i = j;
+            }
+        }
+        return res;
+    }
+};
+```
+
+
+
+## Qt元数据对象
+
+Qt 的元对象系统（Meta-object-system）提供了对象之间通信的信号和槽机制、运行时类型信息和动态属性。
+
+元对象系统由以下三个基础构成：
+
+1、QObject类是所有使用元对象系统的类的基类；
+
+2、在一个类的private 部分声明 Q_OBJECT 宏，使得类可以使用元对象的特性。如动态属性、信号与槽；
+
+3、MOC（Meta-Object Compiler）元对象编译器为每个 QObject 的子类提供必要的代码来实现元对象系统的特性。
+
+构建项目时，MOC 工具读取C++ 源文件时，当它发现类的定义里有Q_Object 宏时，它就会为这个类生成另外一个包含有元对象支持代码的C++ 源文件，这个生成的源文件连同类的实现文件一起被编译和链接。
+
+除了信号与槽机制外，元对象还提供如下一些功能：
+
+```c
+QObject::metaObject() 函数返回类关联的元对象，元对象类 QMetaObject 包含了访问元对象的一些接口函数，例如 QMetaObject::className() 函数可在运行时返回类的名称字符串。
+
+  QObject *obj = new QPushButton;
+  obj->metaObject()->className (); //返回"QPushButton"
+
+ QMetaObject::newInstance() 函数创建类的一个新的实例。
+
+ QObject::inherits(const char *className) 函数判断一个对象实例是否是名称为 className 的类或 QObject 的子类的实例。例如：
+
+  QTimer *timer = new QTimer; // QTimer 是 QObject 的子类
+  timer->inherits ("QTimer"); // 返回 true
+  timer->inherits ("QObject"); // 返回 true
+  timer->inherits ("QAbstractButton");//返回 false,不是 QAbstractButton 的子类
+
+ QObject::tr() 和 QObject::trUtf8() 函数可翻译字符串，用于多语言界面设计，后续章会专门介绍多语言界面设计。
+
+ QObject::setProperty() 和 QObject::property() 函数用于通过属性名称动态设置和获取属性值。
+```
+
+## CMakeLists.txt
+
+
+
+```cmake
+cmake_minimum_required(VERSION 3.5)# 规定最低版本
+
+project(CloudViewer) # 项目名称
+
+# init qt
+set(CMAKE_AUTOMOC ON) # for meta object compiler
+set(CMAKE_AUTORCC ON) # resource files
+set(CMAKE_AUTOUIC ON) # UI files
+
+# find package
+find_package(Qt5 REQUIRED Widgets)
+find_package(PCL 1.7.1 REQUIRED)
+
+include_directories(${PCL_INCLUDE_DIRS})# 将PCL_INCLUDE_DIRS（上面find 到了） 文件夹下的头文件加入到包含路径中，类似于加入到VC++--->包含目录
+link_directories(${PCL_LIBRARY_DIRS})# 同理，链接--》库目录
+add_definitions(${PCL_DEFINITIONS})
+
+# find source files, header files and ui files
+# aux_source_directory(. DIR_SRCS)
+file(GLOB_RECURSE DIR_SRCS    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)#GLOB_RECURSE 将会递归所有匹配文件夹的子文件夹和匹配的文件。将结果保存到变量里面去供下文使用
+file(GLOB_RECURSE DIR_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
+file(GLOB_RECURSE DIR_UIS     ${CMAKE_CURRENT_SOURCE_DIR}/*.ui)
+
+# add resource
+set(RESOURCE ${CMAKE_CURRENT_SOURCE_DIR}/CloudViewer.qrc)
+qt5_add_resources(RESOURCE_ADDED ${RESOURCE})
+# 相当于 GCC -o ${PROJECT_NAME} ${DIR_SRCS}...
+add_executable(${PROJECT_NAME}
+    ${DIR_SRCS}
+    ${DIR_HEADERS}
+    ${DIR_UIS}
+    ${RESOURCE_ADDED}
+)
+# 相当于 GCC -o ${PROJECT_NAME} -l${PCL_LIBRARIES}
+target_link_libraries(${PROJECT_NAME}
+    ${PCL_LIBRARIES}
+    Qt5::Widgets
+)
+
+```
+
+### find_package原理
+
+首先明确一点，cmake本身不提供任何搜索库的便捷方法，所有搜索库并给变量赋值的操作必须由cmake代码完成，比如下面将要提到的FindXXX.cmake和XXXConfig.cmake。只不过，库的作者通常会提供这两个文件，以方便使用者调用。
+
+find_package采用两种模式搜索库：
+
+Module模式：搜索CMAKE_MODULE_PATH指定路径下的FindXXX.cmake文件，执行该文件从而找到XXX库。其中，具体查找库并给XXX_INCLUDE_DIRS和XXX_LIBRARIES两个变量赋值的操作由FindXXX.cmake模块完成。
+Config模式：搜索XXX_DIR指定路径下的XXXConfig.cmake文件，执行该文件从而找到XXX库。其中具体查找库并给XXX_INCLUDE_DIRS和XXX_LIBRARIES两个变量赋值的操作由XXXConfig.cmake模块完成。
+
+两种模式看起来似乎差不多，不过cmake默认采取Module模式，如果Module模式未找到库，才会采取Config模式。如果XXX_DIR路径下找不到XXXConfig.cmake文件，则会找/usr/local/lib/cmake/XXX/中的XXXConfig.cmake文件。总之，Config模式是一个备选策略。通常，库安装时会拷贝一份XXXConfig.cmake到系统目录中，因此在没有显式指定搜索路径时也可以顺利找到。
+
+在我遇到的问题中，由于Caffe安装时没有安装到系统目录，因此无法自动找到CaffeConfig.cmake，我在CMakeLists.txt最前面添加了一句话之后就可以了。
+
+ `set(Caffe_DIR /home/wjg/projects/caffe/build)   #添加CaffeConfig.cmake的搜索路径`
+
+### add_definitions
+
+代码中通过宏　USE_MACRO 作为区分．
+
+．．．
+
+＃ifdef USE_MACRO
+
+．．．
+
+＃endif
+
+我们可以通过在项目中的CMakeLists.txt 中添加如下代码控制代码的开启和关闭．
+
+```c
++ OPTION(USE_MACRO
+
++  "Build the project using macro"
+
++  OFF)
+
++ IF(USE_MACRO)
+
++  add_definitions("-DUSE_MACRO")
+
++ endif(USE_MACRO)
+```
+
+## 关于Windows下与Linux下文件编码格式的讨论
+
+跨平台的程序从GitHub 上下载下来导入到 visual studio 经常报莫名奇怪的错误，经查发现是文件编码的问题。接下来详细记录一下这个问题：
+
+首先，怎么查看Windows 下一个文件的编码格式呢？
+
+很简单，就是用记事本打开并点击另存为就可以看到文件是什么格式了
+
+![image-20200711210801609](https://i.loli.net/2020/07/11/Wy51jaBTCsgfItd.png)
+
+上图中源文件是UTF-8的格式。而我们打开一个正常不乱码的文件查看发现是ANSI格式。不同的国家和地区制定了不同的标准，由此产生了 GB2312、GBK、GB18030、Big5、Shift_JIS 等各自的编码标准。这些使用多个字节来代表一个字符的各种汉字延伸编码方式，称为 ANSI 编码。在简体中文Windows操作系统中，ANSI 编码代表 GB2312编码；在繁体中文Windows操作系统中，ANSI编码代表Big5；
+
+UTF-8 最大的一个特点，就是它是一种变长的编码方式。它可以使用1~4个字节表示一个符号，根据不同的符号而变化字节长度。
+
+UTF-8 的编码规则很简单，只有二条：
+
+1）对于单字节的符号，字节的第一位设为`0`，后面7位为这个符号的 Unicode 码。因此对于英语字母，UTF-8 编码和 ASCII 码是相同的。
+
+2）对于`n`字节的符号（`n > 1`），第一个字节的前`n`位都设为`1`，第`n + 1`位设为`0`，后面字节的前两位一律设为`10`。剩下的没有提及的二进制位，全部为这个符号的 Unicode 码。
+
+下表总结了编码规则，字母`x`表示可用编码的位。
+
+```c
+Unicode符号范围     |        UTF-8编码方式
+(十六进制)        |              （二进制）
+----------------------+---------------------------------------------
+0000 0000-0000 007F | 0xxxxxxx
+0000 0080-0000 07FF | 110xxxxx 10xxxxxx
+0000 0800-0000 FFFF | 1110xxxx 10xxxxxx 10xxxxxx
+0001 0000-0010 FFFF | 11110xxx 10xxxxxx 10xxxxxx 10xxxxxx
+```
+
+跟据上表，解读 UTF-8 编码非常简单。如果一个字节的第一位是`0`，则这个字节单独就是一个字符；如果第一位是`1`，则连续有多少个`1`，就表示当前字符占用多少个字节。
+
+我们下载了VS 中的御用插件 ForceUTF-8 
